htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__complex_app.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::HasSubcontroller<'_, HomeController> for AppController {
        fn as_subcontroller(&self) -> HomeController {
            self.into()
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <HomeController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    impl htmxology::HasSubcontroller<'_, AuthController> for AppController {
        fn as_subcontroller(&self) -> AuthController {
            self.into()
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <AuthController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    impl htmxology::HasSubcontroller<'_, ApiController> for AppController {
        fn as_subcontroller(&self) -> ApiController {
            self.into()
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <ApiController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    impl htmxology::HasSubcontroller<'_, NotFoundController> for AppController {
        fn as_subcontroller(&self) -> NotFoundController {
            self.into()
        }
        fn convert_response(
            htmx: &htmxology::htmx::Request,
            response: <NotFoundController as htmxology::Controller>::Response,
        ) -> <Self as htmxology::Controller>::Response {
            response.into()
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        ///Home page
        #[route("")]
        Home(#[subroute] <HomeController as htmxology::Controller>::Route),
        ///Authentication
        #[route("auth/")]
        Auth(#[subroute] <AuthController as htmxology::Controller>::Route),
        ///API endpoints
        #[route("api/")]
        Api(#[subroute] <ApiController as htmxology::Controller>::Route),
        ///404 handler
        #[catch_all]
        NotFound(<NotFoundController as htmxology::Controller>::Route),
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        type Response = Result<axum::response::Response, axum::response::Response>;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
            args: Self::Args,
        ) -> Self::Response {
            match route {
                Self::Route::Home(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        HomeController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        HomeController,
                    >>::convert_response(&htmx, response)
                }
                Self::Route::Auth(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        AuthController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        AuthController,
                    >>::convert_response(&htmx, response)
                }
                Self::Route::Api(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        ApiController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        ApiController,
                    >>::convert_response(&htmx, response)
                }
                Self::Route::NotFound(route) => {
                    let response = htmxology::SubcontrollerExt::get_subcontroller::<
                        NotFoundController,
                    >(self)
                        .handle_request(route, htmx.clone(), parts, server_info, args)
                        .await;
                    <Self as htmxology::HasSubcontroller<
                        '_,
                        NotFoundController,
                    >>::convert_response(&htmx, response)
                }
            }
        }
    }
}
