htmxology-macros/src/routing_controller/snapshots/htmxology_macros__routing_controller__snapshot_tests__subcontroller_with_multiple_params.snap
---
source: htmxology-macros/src/routing_controller/mod.rs
expression: test_routing_controller(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::AsSubcontroller<'_, PostController, (u32, String)>
    for AppController {
        fn as_subcontroller(&self, args: (u32, String)) -> PostController {
            <PostController>::from((self, args.0, args.1))
        }
    }
    #[derive(Debug, Clone, htmxology::Route)]
    pub enum AppRoute {
        #[route("blog/{blog_id}/post/{post_id}/")]
        Post {
            blog_id: u32,
            post_id: String,
            #[subroute]
            subroute: <PostController as htmxology::Controller>::Route,
        },
    }
    impl htmxology::Controller for AppController {
        type Route = AppRoute;
        type Args = ();
        type Output = axum::response::Response;
        type ErrorOutput = axum::response::Response;
        async fn handle_request(
            &self,
            route: Self::Route,
            htmx: htmxology::htmx::Request,
            parts: http::request::Parts,
            server_info: &htmxology::ServerInfo,
        ) -> Result<Self::Output, Self::ErrorOutput> {
            match route {
                Self::Route::Post { blog_id, post_id, subroute } => {
                    use axum::response::IntoResponse;
                    let result = self
                        .get_subcontroller_with::<PostController>((blog_id, post_id))
                        .handle_request(subroute, htmx, parts, server_info)
                        .await;
                    match result {
                        Ok(output) => Ok(output.into_response()),
                        Err(error) => Err(error.into_response()),
                    }
                }
            }
        }
    }
}
